# Health-EC

./: CMakeLists.txt  README.md
experiments/: CMakeLists.txt
experiments/configs/: hdd_baseline.json  hdd_mild_slow.json  hdd_severe_slow.json
experiments/results/t2_4_3_formal_matrix/: build-and-test.txt  commands.txt  matrix_raw.csv  preflight.txt  run-status.txt  seed_43.csv  seed_44.csv  seed_45.csv  seed_46.csv  summary_by_policy.csv  validation.txt
experiments/results/t2_4_5_3_tdr_timeout_validation/: build-and-test.txt  preflight.txt  selected_timeout.txt  summary_by_timeout.csv  timeout_validation_raw.csv  validation.txt
experiments/results/t2_4_5_4_dynamic_smoke/: build-and-test.txt  noarg_static_table.txt  preflight.txt  run-status.txt  static_canonical_seed42.csv  validation.txt
experiments/results/t2_4_5_5_dynamic_formal_matrix/: build-and-test.txt  commands.txt  dynamic_windowed_raw.csv  paper_figure_windowed_p99.csv  preflight.txt  seed_43_aggregate.csv  seed_43_windowed.csv  seed_44_windowed.csv  seed_45_windowed.csv  seed_46_windowed.csv  seed_48_aggregate.csv  seed_50_windowed.csv  seed_51_aggregate.csv  seed_52_aggregate.csv  seed_53_aggregate.csv  seed_54_aggregate.csv  seed_54_windowed.csv  seed_56_windowed.csv  seed_58_aggregate.csv  seed_59_aggregate.csv  seed_61_aggregate.csv  seed_63_aggregate.csv  seed_65_aggregate.csv  seed_66_windowed.csv  seed_69_aggregate.csv  seed_70_aggregate.csv  seed_70_windowed.csv  validation.txt
experiments/results/t2_4_6_1_corrected_calibration/: build-and-test.txt  preflight.txt  run-status.txt  selected_health_ec_params.txt  static_calibration.txt  validation.txt
experiments/results/t2_4_6_2_corrected_dynamic_smoke/: build-and-test.txt  preflight.txt  validation.txt
experiments/results/t2_4_6_3_corrected_dynamic_formal_matrix/: build-and-test.txt  commands.txt  dynamic_windowed_raw.csv  preflight.txt  seed_42_windowed.csv  seed_43_aggregate.csv  seed_44_windowed.csv  seed_45_aggregate.csv  seed_47_aggregate.csv  seed_47_windowed.csv  seed_48_aggregate.csv  seed_48_windowed.csv  seed_49_aggregate.csv  seed_51_aggregate.csv  seed_52_windowed.csv  seed_53_aggregate.csv  seed_54_windowed.csv  seed_56_aggregate.csv  seed_56_windowed.csv  seed_58_aggregate.csv  seed_63_windowed.csv  seed_64_aggregate.csv  seed_64_windowed.csv  seed_66_windowed.csv  seed_67_windowed.csv  seed_69_windowed.csv  seed_70_aggregate.csv  seed_70_windowed.csv  seed_71_windowed.csv  static_canonical_seed42.csv  validation.txt  windowed_summary_by_policy_window.csv
experiments/results/t2_5_3_tdr_timeout_validation/: build-and-test.txt  commands.txt  preflight.txt  run-status.txt  selected_timeout.txt  validation.txt
experiments/results/t2_5_4_dynamic_smoke/: build-and-test.txt  commands.txt  dynamic_seed42_all.csv  dynamic_seed42_windowed.csv  preflight.txt  validation.txt
experiments/results/t2_5_5_dynamic_formal_matrix/: build-and-test.txt  dynamic_matrix_raw.csv  event_trace_seed42.csv  paper_table_dynamic_main.csv  preflight.txt  run-status.txt  seed_44_aggregate.csv  seed_45_aggregate.csv  seed_46_aggregate.csv  seed_47_aggregate.csv  seed_47_windowed.csv  seed_48_windowed.csv  seed_49_aggregate.csv  seed_49_windowed.csv  seed_50_aggregate.csv  seed_51_windowed.csv  seed_52_windowed.csv  seed_53_windowed.csv  seed_55_aggregate.csv  seed_55_windowed.csv  seed_56_aggregate.csv  seed_57_aggregate.csv  seed_57_windowed.csv  seed_58_windowed.csv  seed_59_windowed.csv  seed_60_aggregate.csv  seed_60_windowed.csv  seed_61_windowed.csv  seed_62_aggregate.csv  seed_62_windowed.csv  seed_63_windowed.csv  seed_64_aggregate.csv  seed_64_windowed.csv  seed_65_windowed.csv  seed_66_aggregate.csv  seed_67_aggregate.csv  seed_67_windowed.csv  seed_68_aggregate.csv  seed_68_windowed.csv  seed_69_windowed.csv  (+5 more)
experiments/results/t2_6_1_corrected_calibration/: build-and-test.txt  commands.txt  dynamic_validation_raw.csv  preflight.txt  selected_health_ec_params.txt  static_calibration.txt  summary_by_candidate.csv  validation.txt
experiments/results/t2_6_2_corrected_dynamic_smoke/: build-and-test.txt  commands.txt  dynamic_seed42_all.csv  dynamic_seed42_windowed.csv  noarg_static_table.txt  preflight.txt  run-status.txt  validation.txt
experiments/results/t2_6_3_corrected_dynamic_formal_matrix/: aggregation_provenance.txt  build-and-test.txt  dynamic_matrix_raw.csv  paper_figure_windowed_p99.csv  paper_table_dynamic_main.csv  preflight.txt  run-status.txt  seed_42_aggregate.csv  seed_43_windowed.csv  seed_44_aggregate.csv  seed_45_windowed.csv  seed_46_aggregate.csv  seed_46_windowed.csv  seed_49_windowed.csv  seed_50_aggregate.csv  seed_50_windowed.csv  seed_51_windowed.csv  seed_52_aggregate.csv  seed_53_windowed.csv  seed_54_aggregate.csv  seed_55_aggregate.csv  seed_55_windowed.csv  seed_57_aggregate.csv  seed_57_windowed.csv  seed_58_windowed.csv  seed_59_aggregate.csv  seed_59_windowed.csv  seed_60_aggregate.csv  seed_60_windowed.csv  seed_61_aggregate.csv  seed_61_windowed.csv  seed_62_aggregate.csv  seed_62_windowed.csv  seed_63_aggregate.csv  seed_65_aggregate.csv  seed_65_windowed.csv  seed_66_aggregate.csv  seed_67_aggregate.csv  seed_68_aggregate.csv  seed_68_windowed.csv  (+4 more)
experiments/results/t2_7_1_aggressive_bypass_contract_smoke/: build-and-test.txt  commands.txt  dynamic_validation_raw.csv  preflight.txt  run-status.txt  validation.txt  (+2 more)
experiments/tools/: calibrate_params.cpp  calibrate_thresholds.cpp  compare_policies.cpp  validate_compare_policies_contract.py
src/core/: CMakeLists.txt  migration_scheduler.cpp  migration_scheduler.h  placement_policy.cpp  placement_policy.h  read_scheduler.cpp  read_scheduler.h  score_manager.cpp  score_manager.h
src/ec/: CMakeLists.txt  jerasure_wrapper.cpp  jerasure_wrapper.h
src/sim/: CMakeLists.txt  disk_simulator.cpp  disk_simulator.h  workload_generator.cpp  workload_generator.h
tests/: CMakeLists.txt  test_disk_simulator.cpp  test_integration.cpp  test_jerasure_wrapper.cpp  test_loser_significance.cpp  test_migration_scheduler.cpp  test_read_scheduler.cpp  test_score_manager.cpp
(+129 files in other folders)
